# poke_ip_go

./: .gitignore  Cargo.toml  README.md  mobile.toml
.cargo/: config.toml
mobile/: Cargo.toml  mobile.toml
mobile/.cargo/: config.toml
mobile/src/: lib.rs
src/: android.lib.rs  app.rs  ip.rs  ip_api.rs  lib.rs  main.rs  main.rs.bak  poke_api.rs  pokedex.rs  pokemon.rs  storage_api.rs
