[package]
name = "poke-ip-go"
version = "0.3.0"
edition = "2021"
default-run = "poke_ip_go"
authors = ["florek <watashi@example.com>"]

[lib]
#name = "poke-ip-go"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

#[[bin]]
#name = "poke-ip-go-mobile"
#path = "gen/bin/desktop.rs"

[[bin]]
name = "poke_ip_go"
path = "src/bin/app.rs"

#[[bin]]
#name = "PathIpWeb"
#path = "src/main.rs"

[dependencies]
anyhow = "1.0.52"
bytemuck = "1.13"
dioxus = { version = "0.3.1"}
easy_storage = { path = "deps/easy_storage"}
futures = "0.3.19"
futures-channel = "0.3.19"
getrandom = {version = "0.2.8", features = ["js"]}
lazy_static = "1.4"
log = "0.4"
rand = {version = "0.8", features = ["small_rng", "alloc", "getrandom"], default-features = false}
serde = "1"
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
ndk-glue = "0.2.1"
mobile-entry-point = "0.1.0"
openssl = { version = "0.10", features = ["vendored"]}
dioxus-mobile = "0.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
pretty_env_logger = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.3.0"
wasm_request = "0.1"
serde-wasm-bindgen = "0.4"
console_log = "0.2.0"
web-sys = "0.3"
instant = { version = "0.1", features = ["wasm-bindgen"]}
wasm-cookies = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.25", features = ["full"]}
dioxus-desktop = "0.3.0"
rustemon = "3.1"
reqwest = { version = "0.11", features = ["json"]}
instant = {version = "0.1"}
